# relay-pool-desktop

./: .gitignore  AGENTS.md  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  vite.config.ts  vitest.config.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/.sqlx/: query-1f8135f9f8113cb135c5070d9eeccb7bf4046a40617869881fa66e57ef474657.json  query-5c9198ca2db13419e807ff17608d02adc8c5bc700baecee9504fb4e56842d511.json  query-bf23e17015ed9ae12f29cfbb8523bc905d5cbf323475b60df2c10fe9f4e67761.json  query-f4df90079e674f7d91f40c09dbb0c75619f2665f4e4b7eb90d524bfad8ffc5c0.json
src-tauri/capabilities/: capture.json  default.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: main-window.toml  record-capture-event.toml
src-tauri/src/: app_composition.rs  lib.rs  main.rs  runtime_composition.rs
src-tauri/src/application/: app_services.rs  changes.rs  clock.rs  collectors.rs  credentials.rs  data_directory.rs  error.rs  ids.rs  mod.rs  monitoring.rs  pagination.rs  pricing.rs  request_finalization.rs  request_lifecycle_persistence.rs  request_logs.rs  routing.rs  settings.rs  stations.rs
src-tauri/src/application/queries/: change_center.rs  channel_status.rs  mod.rs  pricing_comparison.rs  station_assets.rs  station_detail.rs
src-tauri/src/application/request_lifecycle/: attempt.rs  delivery.rs  mod.rs  ports.rs  request.rs
src-tauri/src/application/routing_engine/: mod.rs  router.rs  routing_failure.rs  routing_health.rs  routing_policy.rs  routing_snapshot.rs  routing_types.rs
src-tauri/src/commands/: credentials.rs  data_recovery.rs  mod.rs  monitoring.rs  pricing.rs  routing.rs  settings.rs  stations.rs
src-tauri/src/models/: capture.rs  change_events.rs  channel_monitors.rs  collector.rs  collector_runs.rs  credentials.rs  group_facts.rs  mod.rs  pricing.rs  proxy.rs  remote_keys.rs  routing.rs  secrets.rs  settings.rs  shared_capabilities.rs  station_endpoints.rs  station_keys.rs  stations.rs
src-tauri/src/persistence/: backup.rs  differential_tests.rs  error.rs  health_check.rs  inspection.rs  migrations.rs  mod.rs  performance_tests.rs  read_session.rs  runtime.rs  runtime_lifecycle.rs  schema_compatibility.rs  settings_compat.rs  upgrade_fault.rs  upgrade_journal.rs  upgrade_recovery_executor.rs  upgrade_recovery_plan.rs  write_coordinator.rs  write_session.rs
src-tauri/src/persistence/legacy_import/: detect.rs  import.rs  mod.rs  validate.rs
src-tauri/src/persistence/migrations/: 0001_v2_initial.sql  0002_catalog_settings.sql  0003_credentials_keys.sql  0004_routing.sql  0005_request_logs.sql  0006_collectors_changes.sql  0007_pricing_monitoring.sql  0008_legacy_parity.sql
src-tauri/src/persistence/stores/: change_store.rs  collector_store.rs  credential_store.rs  mod.rs  monitoring_store.rs  pricing_store.rs  request_log_store.rs  request_log_write.rs  routing_store.rs  settings_store.rs  station_catalog.rs
src-tauri/src/services/: change_events.rs  database.rs  endpoint_ping.rs  group_categories.rs  mod.rs  outbound.rs  pricing_catalog.rs  remote_keys.rs  shared_capabilities.rs  station_collectors.rs  station_endpoints.rs  time.rs  updater.rs
src-tauri/src/services/capture/: mod.rs  redaction.rs  session.rs  web_authorization.rs
src-tauri/src/services/channel_monitors/: mod.rs  probe.rs  redaction.rs  templates.rs
src-tauri/src/services/health/: mod.rs
src-tauri/tests/: persistence_architecture.rs  persistence_collectors.rs  persistence_differential.rs  persistence_fault_matrix.rs  persistence_installation_lease.rs  persistence_pricing_monitoring.rs  persistence_runtime.rs  persistence_sessions.rs  persistence_startup_cutover.rs  persistence_upgrade.rs  persistence_upgrade_recovery.rs  proxy_lifecycle_concurrency.rs  proxy_lifecycle_domain.rs  proxy_lifecycle_faults.rs  proxy_lifecycle_persistence.rs  proxy_protocol_contracts.rs
(+669 files in other folders)
