[package]
name = "relay-pool-desktop"
version = "0.0.0"
description = "Local desktop AI relay pool manager"
authors = ["Relay Pool Desktop contributors"]
edition = "2021"

[lib]
name = "relay_pool_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
aes-gcm = "0.10"
base64 = "0.22"
keyring = { version = "3", default-features = false, features = ["windows-native"] }
rand = "0.8"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2", features = [] }
ureq = { version = "2", features = ["json"] }
