[package]
name = "relay-pool-desktop"
version = "0.1.1"
description = "Local desktop AI relay pool manager"
authors = ["Relay Pool Desktop contributors"]
edition = "2021"

[lib]
name = "relay_pool_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
aes-gcm = "0.10"
base64 = "0.22"
keyring = { version = "3", default-features = false, features = ["windows-native"] }
rand = "0.8"
rfd = "0.15"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
sha2 = "0.10"
tauri = { version = "2", features = [] }
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
ureq = { version = "2", features = ["json", "socks-proxy"] }

[target.'cfg(windows)'.dependencies]
winreg = "0.55"
